[metadata]
name = stsci.numdisplay
version = 1.6.1.dev
author = Warren Hack
author-email = help@stsci.edu
summary = Package for displaying numpy arrays in DS9
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist = 
	stsci.tools
	numpy (>=1.5.1)

[files]
packages_root = lib
packages = 
	stsci
	stsci.numdisplay
package_data = 
	stsci.numdisplay = imtoolrc ichar.dat

[global]
setup_hooks = 
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

